Reworked docs and ignored files